// Copyright 2017 The ObjectHash-Proto Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This is used for tests that involve floats.

syntax = "proto3";

package schema.proto3;

option go_package = "github.com/pcj/objecthash-proto/test_protos/generated/latest/proto3";
message DoubleMessage {
  double value = 1;
  repeated double values = 2;
}

message FloatMessage {
  float value = 1;
  repeated float values = 2;
}
